--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,31 @@
 <ion-app>
-  <ion-split-pane contentId="main-content">
-    <ion-menu color="tertiary" contentId="main-content" type="overlay">
-      <ion-header>
-        <ion-toolbar color="tertiary">
-          <ion-avatar class="ion-margin">
-            <img [src]="profilePic">
-          </ion-avatar>
-          <ion-title class="ion-margin-bottom">
-            {{name}}
-            <br />
-            <span>{{email}}</span>
-          </ion-title>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content color="tertiary">
-        <ion-list style="padding: 0;" lines="none" class="ion-margin-top">
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
-            <ion-item [routerDirection]="'root'" [routerLink]="[p.url]" color="tertiary" lines="none">
-              <ion-icon slot="start" [name]="p.icon"></ion-icon>
-              <ion-label>
-                {{p.title}}
-              </ion-label>
-            </ion-item>
-          </ion-menu-toggle>
-        </ion-list>
-        <!-- <div class="socialIcons text-center">
-          <a class="fa fa-facebook"></a>
-          <a class="fa fa-twitter"></a>
-          <a class="fa fa-instagram"></a>
-        </div> -->
-      </ion-content>
-    </ion-menu>
-    <ion-router-outlet id="main-content"></ion-router-outlet>
-  </ion-split-pane>
+	<ion-split-pane contentId="main-content">
+		<ion-menu color="tertiary" contentId="main-content" type="overlay">
+			<ion-header>
+				<ion-toolbar color="tertiary">
+					<ion-avatar class="ion-margin">
+						<img [src]="profilePic">
+					</ion-avatar>
+					<ion-title class="ion-margin-bottom">
+						{{name}}
+						<br />
+						<span>{{email}}</span>
+					</ion-title>
+				</ion-toolbar>
+			</ion-header>
+			<ion-content color="tertiary">
+				<ion-list style="padding: 0;" lines="none" class="ion-margin-top">
+					<ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
+						<ion-item [routerDirection]="'root'" [routerLink]="[p.url]" color="tertiary" lines="none">
+							<ion-icon slot="start" [name]="p.icon"></ion-icon>
+							<ion-label>
+								{{p.title}} <span *ngIf="p.title == 'Notification'" class="float-right pr-2">{{unread}}</span>
+							</ion-label>
+						</ion-item>
+					</ion-menu-toggle>
+				</ion-list>
+			</ion-content>
+		</ion-menu>
+		<ion-router-outlet id="main-content"></ion-router-outlet>
+	</ion-split-pane>
 </ion-app>
