--- a/src/app/notifications/notifications.page.html
+++ b/src/app/notifications/notifications.page.html
@@ -6,8 +6,8 @@
 </ion-header>
 <ion-content>
 	<ion-list lines="none">
-		<ion-item-sliding *ngFor="let n of notification" class="big">
-			<ion-item [ngClass]="n.color ? 'itemColor' : ''">
+		<div *ngFor="let n of notification" class="big">
+			<ion-item [ngClass]="n.color ? 'itemColor' : ''" (click)="readNotification(n)" *ngIf="!n.delete">
 				<ion-avatar slot="start" class="Randomcolor"
 					[ngStyle]="{'background-color': colors(n.title.slice(0, 1))}">
 					{{n.title| slice:0:1}}
@@ -18,7 +18,7 @@
 							{{n.title}}
 						</span>
 						<span class="ion-float-right dateBig">
-							{{n.date}} {{n.time}}
+							{{n.date == date ? '' : n.date  | date: "d MMM"}} {{n.time}}
 						</span>
 					</span>
 					<span class="font">
@@ -30,17 +30,9 @@
 					</span>
 				</ion-label>
 			</ion-item>
-			<ion-item-options side="end">
-				<ion-item-option color="danger">
-					<ion-icon slot="icon-only" name="trash"></ion-icon>
-				</ion-item-option>
-				<ion-item-option>
-					<ion-icon slot="icon-only" name="checkmark-circle-outline"></ion-icon>
-				</ion-item-option>
-			</ion-item-options>
-		</ion-item-sliding>
-		<ion-item-sliding class="small" *ngFor="let n of notification">
-			<ion-item [ngClass]="n.color ? 'itemColor' : ''">
+		</div>
+		<div class="small" *ngFor="let n of notification">
+			<ion-item [ngClass]="n.color ? 'itemColor' : ''" (click)="readNotification(n)" *ngIf="!n.delete">
 				<ion-avatar slot="start" class="Randomcolor"
 					[ngStyle]="{'background-color': colors(n.title.slice(0, 1))}">
 					{{n.title| slice:0:1}}
@@ -49,7 +41,7 @@
 					<h2 class="font">
 						{{n.title}}
 						<span class="ion-float-right dateSmall">
-							{{n.date | date: "d MMM"}} {{n.time}}
+							{{n.date == date ? '' : n.date  | date: "d MMM"}} {{n.time}}
 						</span>
 					</h2>
 					<h3 class="font">
@@ -60,15 +52,7 @@
 					</p>
 				</ion-label>
 			</ion-item>
-			<ion-item-options side="end">
-				<ion-item-option color="danger">
-					<ion-icon slot="icon-only" name="trash"></ion-icon>
-				</ion-item-option>
-				<ion-item-option>
-					<ion-icon slot="icon-only" name="checkmark-circle-outline"></ion-icon>
-				</ion-item-option>
-			</ion-item-options>
 			<hr class="m-0">
-		</ion-item-sliding>
+		</div>
 	</ion-list>
 </ion-content>
