--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,31 +1,40 @@
 .socialIcons {
-    position: absolute;
-    bottom  : 10px;
-    width   : 100%;
+	position: absolute;
+	bottom  : 10px;
+	width   : 100%;
 
-    .fa {
-        padding        : 10px;
-        font-size      : 20px;
-        text-align     : center;
-        text-decoration: none;
-        margin         : 5px;
-        border-radius  : 50%;
-        background     : white;
-    }
+	.fa {
+		padding        : 10px;
+		font-size      : 20px;
+		text-align     : center;
+		text-decoration: none;
+		margin         : 5px;
+		border-radius  : 50%;
+		background     : white;
+	}
 
-    .fa:hover {
-        opacity: 0.7;
-    }
+	.fa:hover {
+		opacity: 0.7;
+	}
 
-    .fa-facebook {
-        color: #3B5998;
-    }
+	.fa-facebook {
+		color: #3B5998;
+	}
 
-    .fa-twitter {
-        color: #55ACEE;
-    }
+	.fa-twitter {
+		color: #55ACEE;
+	}
 
-    .fa-instagram {
-        color: #125688;
-    }
+	.fa-instagram {
+		color: #125688;
+	}
+}
+
+.notification {
+	color           : #800020;
+	background-color: #fff;
+	width           : 25px;
+	height          : 25px;
+	font-weight     : 600;
+	border-radius   : 50%;
 }
