--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -30,11 +30,19 @@
 	}
 }
 
-.notification {
+span.notification {
 	color           : #800020;
 	background-color: #fff;
 	width           : 25px;
 	height          : 25px;
 	font-weight     : 600;
 	border-radius   : 50%;
+
+	p {
+		text-align : center;
+		font-size  : 17px;
+		padding    : 0;
+		padding-top: 3.5px;
+		margin     : 0;
+	}
 }
