--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -79,7 +79,7 @@
 							</ion-col>
 						</ion-row>
 					</div>
-					<div *ngIf="user.guardian">
+					<div *ngIf="user.guardian.firstName">
 						<h1 class="pl-2">
 							Gardian Details
 						</h1>
