--- a/src/app/notifications/notifications.page.html
+++ b/src/app/notifications/notifications.page.html
@@ -7,52 +7,57 @@
 <ion-content>
 	<ion-list lines="none">
 		<div *ngFor="let n of notification" class="big">
-			<ion-item [ngClass]="n.color ? 'itemColor' : ''" (click)="readNotification(n)" *ngIf="!n.delete">
-				<ion-avatar slot="start" class="Randomcolor"
-					[ngStyle]="{'background-color': colors(n.title.slice(0, 1))}">
-					{{n.title| slice:0:1}}
-				</ion-avatar>
-				<ion-label>
-					<span class="font">
-						<span class="name">
-							{{n.title}}
+			<div *ngIf="!n.delete">
+				<ion-item [ngClass]="n.color ? 'itemColor' : ''" (click)="readNotification(n)">
+					<ion-avatar slot="start" class="Randomcolor"
+						[ngStyle]="{'background-color': colors(n.title.slice(0, 1))}">
+						{{n.title| slice:0:1}}
+					</ion-avatar>
+					<ion-label>
+						<span class="font">
+							<span class="name">
+								{{n.title}}
+							</span>
+							<span class="ion-float-right dateBig">
+								{{n.date == date ? '' : n.date  | date: "d MMM"}} {{n.time}}
+							</span>
 						</span>
-						<span class="ion-float-right dateBig">
-							{{n.date == date ? '' : n.date  | date: "d MMM"}} {{n.time}}
+						<span class="font">
+							{{n.subTitle}}
 						</span>
-					</span>
-					<span class="font">
-						{{n.subTitle}}
-					</span>
-					<span class="hide "> &nbsp; - &nbsp; </span>
-					<span class="p">
-						{{n.message}}
-					</span>
-				</ion-label>
-			</ion-item>
+						<span class="hide "> &nbsp; - &nbsp; </span>
+						<span class="p">
+							{{n.message}}
+						</span>
+					</ion-label>
+				</ion-item>
+				<hr class="m-0">
+			</div>
 		</div>
 		<div class="small" *ngFor="let n of notification">
-			<ion-item [ngClass]="n.color ? 'itemColor' : ''" (click)="readNotification(n)" *ngIf="!n.delete">
-				<ion-avatar slot="start" class="Randomcolor"
-					[ngStyle]="{'background-color': colors(n.title.slice(0, 1))}">
-					{{n.title| slice:0:1}}
-				</ion-avatar>
-				<ion-label>
-					<h2 class="font">
-						{{n.title}}
-						<span class="ion-float-right dateSmall">
-							{{n.date == date ? '' : n.date  | date: "d MMM"}} {{n.time}}
-						</span>
-					</h2>
-					<h3 class="font">
-						{{n.subTitle}}
-					</h3>
-					<p>
-						{{n.message}}
-					</p>
-				</ion-label>
-			</ion-item>
-			<hr class="m-0">
+			<div *ngIf="!n.delete">
+				<ion-item [ngClass]="n.color ? 'itemColor' : ''" (click)="readNotification(n)">
+					<ion-avatar slot="start" class="Randomcolor"
+						[ngStyle]="{'background-color': colors(n.title.slice(0, 1))}">
+						{{n.title| slice:0:1}}
+					</ion-avatar>
+					<ion-label>
+						<h2 class="font">
+							{{n.title}}
+							<span class="ion-float-right dateSmall">
+								{{n.date == date ? '' : n.date  | date: "d MMM"}} {{n.time}}
+							</span>
+						</h2>
+						<h3 class="font">
+							{{n.subTitle}}
+						</h3>
+						<p>
+							{{n.message}}
+						</p>
+					</ion-label>
+				</ion-item>
+				<hr class="m-0">
+			</div>
 		</div>
 	</ion-list>
 </ion-content>
