--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -79,22 +79,22 @@
 							</ion-col>
 						</ion-row>
 					</div>
-					<div *ngIf="user.guardian.firstName">
+					<div *ngIf="user.guardian?.firstName">
 						<h1 class="pl-2">
-							Gardian Details
+							Guardian Details
 						</h1>
 						<div class="gardian ion-padding-start">
 							<ion-row>
 								<ion-col size=1>
 									<ion-icon name="person-outline"></ion-icon>
 								</ion-col>
-								<ion-col size=11>{{user.guardian.firstName}} {{user.guardian.lastName}}</ion-col>
+								<ion-col size=11>{{user.guardian?.firstName}} {{user.guardian?.lastName}}</ion-col>
 							</ion-row>
 							<ion-row *ngIf="user.cellNumber">
 								<ion-col size=1>
 									<ion-icon name="call-outline"></ion-icon>
 								</ion-col>
-								<ion-col size=11>{{user.guardian.cellNr}}</ion-col>
+								<ion-col size=11>{{user.guardian?.cellNr}}</ion-col>
 							</ion-row>
 						</div>
 					</div>
